# media-planner-infra

./: .env.example  .gitignore  LANGGRAPH_STUDIO_SETUP.md  LOCAL_SETUP.md  README.md  REFACTORING_PLAN.md  TEMPORAL_SETUP.md  WORKSPACE_TESTING_GUIDE.md  docker-compose.temporal-minimal.yml  docker-compose.temporal.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_langgraph.py  start_services.sh  supabase_setup.sh  temporal.env  test_domain.py  test_local_setup.sh  test_vault_cli.sql  test_workspace_graph.py  workspace_test_graph.py
app/: dependencies.py
app/api/v1/: api.py
app/core/: config.py  exceptions.py
app/middleware/: __init__.py  auth_middleware.py  error_handling.py
app/schemas/: base.py  websocket.py
app/services/: auth.py  auth_client.py  credential_storage.py  data_workflows.py  database.py  temporal_service.py  websocket.py
app/services/google/: __init__.py  ads_client.py  auth.py  auth_enhanced.py  drive_client.py  sheets_client.py
app/services/langgraph/: __init__.py  agent_service.py  base_agent.py  config.py  error_handler.py  graph.py  monitoring.py  resource_manager.py  state_manager.py
app/temporal/: client.py  schedulers.py
docs/: LANGGRAPH_ARCHITECTURE.md
examples/: auth_integration_demo.py
scripts/: lint.sh  setup.sh  temporal-start.sh  test.sh
src/: main.py
src/core/: config.py  database.py  dependencies.py  exceptions.py
src/domain/: __init__.py  entities.py  events.py  exceptions.py  interfaces.py  services.py  value_objects.py
supabase/migrations/: setup_vault_permissions.sql
temporal-config/: development-sql.yaml
tests/: test_auth.py  test_database.py  test_main.py
tests/api/: test_google_integration.py  test_workspace_agent.py  test_workspace_tools.py
tests/services/: test_auth_integration.py  test_auth_service_integration.py
(+42 files in other folders)
